# ShadowProbe

./: .dockerignore  .editorconfig  .gitignore  .make-tips  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  USAGE.md  WORKFLOW.md  docker-compose.yml  ejemplos-uso.sh
.github/workflows/: rust.yml
benches/: scan_benchmark.sh
crates/shadowprobe-ai/: Cargo.toml
crates/shadowprobe-ai/src/: analyzer.rs  lib.rs  model.rs  model_test.rs  scoring.rs
crates/shadowprobe-cli/: Cargo.toml
crates/shadowprobe-cli/src/: main.rs
crates/shadowprobe-cli/src/commands/: list.rs  mod.rs  scan.rs  version.rs
crates/shadowprobe-core/: Cargo.toml
crates/shadowprobe-core/src/: config.rs  error.rs  lib.rs  stats.rs  types.rs  types_test.rs
crates/shadowprobe-report/: Cargo.toml
crates/shadowprobe-report/src/: console.rs  html.rs  json.rs  lib.rs
crates/shadowprobe-report/src/exporters/: csv.rs  markdown.rs  mod.rs  sarif.rs
crates/shadowprobe-scanner/: Cargo.toml
crates/shadowprobe-scanner/src/: cache.rs  client.rs  crawler.rs  evasion.rs  lib.rs  payloads.rs  payloads_test.rs  rate_limiter.rs
crates/shadowprobe-scanner/src/scanners/: command_injection.rs  cors.rs  lfi.rs  mod.rs  open_redirect.rs  sqli.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
docs/: CHANGELOG.md  README.md  ROADMAP.md
examples/config/: bug-bounty.yml  custom-profile.yml
examples/targets/: README.md
examples/usage/: advanced-scan.sh  basic-scan.sh  stealth-scan.sh
scripts/: compare-scans.sh  generate-badge.sh  install.sh  quick-scan.sh  run-tests.sh  setup-dev.sh
