[package]
name = "shadowprobe-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shadowprobe-core = { path = "../shadowprobe-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
