[package]
name = "shadowprobe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
